# cmake

./: CMakeLists.txt
src/: main.c
